<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.alver.fatefall</groupId>
	<artifactId>fatefall</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>Fatefall</name>
	<modules>
		<module>fatefall-core</module>
		<module>fatefall-server</module>
		<module>fatefall-client</module>
		<module>fatefall-fx</module>
	</modules>

	<properties>
		<revision>1.0-SNAPSHOT</revision>

		<java.version>22</java.version>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
		<maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
		<javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>

		<junit.version>5.9.3</junit.version>
		<jackson.version>2.15.2</jackson.version>

		<spring-core.version>6.1.6</spring-core.version>
		<spring-boot-starter.version>3.2.5</spring-boot-starter.version>
		<logback-ext-spring.version>0.1.5</logback-ext-spring.version>

		<hsqldb.version>2.7.1</hsqldb.version>

		<manifest.main.class>placeholder</manifest.main.class>
		<manifest.javafx.preloader.class>placeholder</manifest.javafx.preloader.class>

		<maven-jarsigner-plugin.keystore>../keystore/keystore.jks</maven-jarsigner-plugin.keystore>
		<maven-jarsigner-plugin.alias>server</maven-jarsigner-plugin.alias>
		<maven-jarsigner-plugin.storepass>password</maven-jarsigner-plugin.storepass>
		<maven-jarsigner-plugin.keypass>password</maven-jarsigner-plugin.keypass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>

			<!-- Fatefall -->
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-server</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-server-app</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-server-controller</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-server-service</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-server-repository</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-client</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-fx</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-fx-app</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-fx-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-fx-theme</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.alver.fatefall</groupId>
				<artifactId>fatefall-fx-plugin</artifactId>
				<version>${revision}</version>
			</dependency>


			<!-- Spring -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring-boot-starter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-jpa</artifactId>
				<version>${spring-boot-starter.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-webflux</artifactId>
				<version>${spring-boot-starter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webflux</artifactId>
				<version>${spring-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.logback-extensions</groupId>
				<artifactId>logback-ext-spring</artifactId>
				<version>${logback-ext-spring.version}</version>
			</dependency>

			<!-- Serialization -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jdk8</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-xml</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- Database -->
			<dependency>
				<groupId>org.hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>${hsqldb.version}</version>
			</dependency>

			<!-- Testing -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Maven Jarsigner Plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jarsigner-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>sign</id>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<keystore>${maven-jarsigner-plugin.keystore}</keystore>
						<alias>${maven-jarsigner-plugin.alias}</alias>
						<storepass>${maven-jarsigner-plugin.storepass}</storepass>
						<keypass>${maven-jarsigner-plugin.keypass}</keypass>
					</configuration>
				</plugin>

				<!-- Maven Flatten Plugin -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.5.0</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten.clean</id>
							<phase>install</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- Maven Shade Plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.5.0</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
							<configuration>
								<transformers>
									<transformer
											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
										<manifestEntries>
											<Main-Class>${manifest.main.class}</Main-Class>
											<JavaFX-Preloader-Class>${manifest.javafx.preloader.class}
											</JavaFX-Preloader-Class>
										</manifestEntries>
									</transformer>
								</transformers>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>